--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -17,8 +17,86 @@ set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
 set_real_ip_from 104.219.236.100;
+set_real_ip_from 104.244.72.115;
+set_real_ip_from 104.244.72.132;
+set_real_ip_from 104.244.73.136;
+set_real_ip_from 104.244.73.190;
+set_real_ip_from 104.244.74.23;
+set_real_ip_from 104.244.74.97;
+set_real_ip_from 104.244.75.74;
+set_real_ip_from 104.244.75.89;
+set_real_ip_from 104.244.77.192;
+set_real_ip_from 104.244.77.208;
+set_real_ip_from 104.244.78.162;
+set_real_ip_from 104.244.78.233;
+set_real_ip_from 104.244.79.44;
+set_real_ip_from 104.244.79.50;
+set_real_ip_from 104.244.79.61;
 set_real_ip_from 107.172.31.218;
 set_real_ip_from 107.174.138.172;
+set_real_ip_from 107.189.10.175;
+set_real_ip_from 107.189.11.111;
+set_real_ip_from 107.189.11.113;
+set_real_ip_from 107.189.11.53;
+set_real_ip_from 107.189.1.160;
+set_real_ip_from 107.189.1.167;
+set_real_ip_from 107.189.1.175;
+set_real_ip_from 107.189.1.198;
+set_real_ip_from 107.189.12.3;
+set_real_ip_from 107.189.12.48;
+set_real_ip_from 107.189.12.7;
+set_real_ip_from 107.189.12.88;
+set_real_ip_from 107.189.13.180;
+set_real_ip_from 107.189.13.251;
+set_real_ip_from 107.189.13.253;
+set_real_ip_from 107.189.13.254;
+set_real_ip_from 107.189.13.91;
+set_real_ip_from 107.189.14.106;
+set_real_ip_from 107.189.14.4;
+set_real_ip_from 107.189.14.43;
+set_real_ip_from 107.189.1.80;
+set_real_ip_from 107.189.1.9;
+set_real_ip_from 107.189.2.108;
+set_real_ip_from 107.189.2.179;
+set_real_ip_from 107.189.2.206;
+set_real_ip_from 107.189.28.124;
+set_real_ip_from 107.189.29.103;
+set_real_ip_from 107.189.29.184;
+set_real_ip_from 107.189.30.236;
+set_real_ip_from 107.189.30.49;
+set_real_ip_from 107.189.30.69;
+set_real_ip_from 107.189.30.86;
+set_real_ip_from 107.189.3.11;
+set_real_ip_from 107.189.31.232;
+set_real_ip_from 107.189.31.248;
+set_real_ip_from 107.189.31.33;
+set_real_ip_from 107.189.3.249;
+set_real_ip_from 107.189.4.12;
+set_real_ip_from 107.189.4.158;
+set_real_ip_from 107.189.4.209;
+set_real_ip_from 107.189.5.114;
+set_real_ip_from 107.189.5.121;
+set_real_ip_from 107.189.5.18;
+set_real_ip_from 107.189.5.19;
+set_real_ip_from 107.189.5.7;
+set_real_ip_from 107.189.6.124;
+set_real_ip_from 107.189.6.36;
+set_real_ip_from 107.189.7.114;
+set_real_ip_from 107.189.7.141;
+set_real_ip_from 107.189.7.144;
+set_real_ip_from 107.189.7.161;
+set_real_ip_from 107.189.7.168;
+set_real_ip_from 107.189.7.47;
+set_real_ip_from 107.189.8.133;
+set_real_ip_from 107.189.8.136;
+set_real_ip_from 107.189.8.141;
+set_real_ip_from 107.189.8.181;
+set_real_ip_from 107.189.8.226;
+set_real_ip_from 107.189.8.238;
+set_real_ip_from 107.189.8.5;
+set_real_ip_from 107.189.8.56;
+set_real_ip_from 107.189.8.65;
+set_real_ip_from 107.189.8.70;
 set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.16.251;
 set_real_ip_from 108.181.27.205;
@@ -52,7 +130,6 @@ set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
-set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.239.146.142;
@@ -221,7 +298,6 @@ set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -579,6 +655,7 @@ set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.133;
+set_real_ip_from 193.218.118.137;
 set_real_ip_from 193.218.118.155;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
@@ -606,6 +683,10 @@ set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
+set_real_ip_from 198.251.84.163;
+set_real_ip_from 198.251.84.237;
+set_real_ip_from 198.251.88.18;
+set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
@@ -1061,6 +1142,72 @@ set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:a28:b37e:88e9:caa1:7b9c;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:ff9::1;
+set_real_ip_from 2605:6400:30:e88d:36fc:7ca1:dff5:1e57;
+set_real_ip_from 2605:6400:30:e948:4cee:191b:1e55:25b3;
+set_real_ip_from 2605:6400:30:ea52:4246:fb82:f36c:8ede;
+set_real_ip_from 2605:6400:30:ea58:51a1:e174:d185:d6f1;
+set_real_ip_from 2605:6400:30:ea86:59b6:d4c6:5192:1a19;
+set_real_ip_from 2605:6400:30:eb71:51b7:4869:7579:3aa1;
+set_real_ip_from 2605:6400:30:ebb6:532:acc:65:31;
+set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
+set_real_ip_from 2605:6400:30:edc3::34;
+set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
+set_real_ip_from 2605:6400:30:efba:dead::;
+set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
+set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
+set_real_ip_from 2605:6400:30:f10c:326a:ca74:1896:b82a;
+set_real_ip_from 2605:6400:30:f10c:4de5:f13b:1d56:2ab6;
+set_real_ip_from 2605:6400:30:f10c:6327:774b:289a:2916;
+set_real_ip_from 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
+set_real_ip_from 2605:6400:30:f174::;
+set_real_ip_from 2605:6400:30:f174:1:1:1:1;
+set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
+set_real_ip_from 2605:6400:30:f174:1:2:3:4;
+set_real_ip_from 2605:6400:30:f174::42;
+set_real_ip_from 2605:6400:30:f174:42:42::;
+set_real_ip_from 2605:6400:30:f174:42:42:42:0;
+set_real_ip_from 2605:6400:30:f174:42:42:42:42;
+set_real_ip_from 2605:6400:30:f174:4:3:2:1;
+set_real_ip_from 2605:6400:30:f174:cafe::;
+set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
+set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
+set_real_ip_from 2605:6400:30:f307:3aa6:91d4:da12:7eee;
+set_real_ip_from 2605:6400:30:f307:5d12:16d8:1641:2b15;
+set_real_ip_from 2605:6400:30:f307:ba73:e934:5195:accd;
+set_real_ip_from 2605:6400:30:f307:c2bf:d371:75a9:31e6;
+set_real_ip_from 2605:6400:30:f307:ff42:3928:c777:8563;
+set_real_ip_from 2605:6400:30:f32b:7417:ea33:425b:9732;
+set_real_ip_from 2605:6400:30:f32b:8fec:4251:d9d1:1ff5;
+set_real_ip_from 2605:6400:30:f32b:c191:e73e:8bd5:9c61;
+set_real_ip_from 2605:6400:30:f330:61ea:72a8:8aea:fa1f;
+set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
+set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
+set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
+set_real_ip_from 2605:6400:30:f44f:1::;
+set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
+set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
+set_real_ip_from 2605:6400:30:f503::1;
+set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
+set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
+set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
+set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
+set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
+set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
+set_real_ip_from 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
+set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
+set_real_ip_from 2605:6400:30:f7c0:8511:b113:ca11:9baa;
+set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
+set_real_ip_from 2605:6400:30:f805:1e96:b223:fbe5:cfac;
+set_real_ip_from 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
+set_real_ip_from 2605:6400:30:f858:2704:73e1:7085:12ef;
+set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
+set_real_ip_from 2605:6400:30:f8c7:789f:51fe:6499:124f;
+set_real_ip_from 2605:6400:30:f8c7:8d46:8271:af8c:41e8;
+set_real_ip_from 2605:6400:30:f8c7:9dd6:86f8:b5b9:a6e2;
+set_real_ip_from 2605:6400:30:f8c7:f36b:5e7b:59f3:a5eb;
+set_real_ip_from 2605:6400:30:f8d5::1;
+set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
+set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
@@ -1534,7 +1681,6 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:3b8:1cb:287c:3f60:805d;
 set_real_ip_from 2a0c:2500:571:3b8:e28b:b891:d56b:963a;
-set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1573,6 +1719,7 @@ set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
+set_real_ip_from 2a0f:e586:f:f:fca1:db52:9055:cff3;
 set_real_ip_from 2a10:1fc0:3::95a:d528;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1614,8 +1761,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
-set_real_ip_from 45.129.84.249;
+set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1819,7 +1965,6 @@ set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.252.120.163;
 set_real_ip_from 84.252.121.147;
 set_real_ip_from 85.17.9.83;
-set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.205.5.107;
 set_real_ip_from 87.118.110.27;
