--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,7 +150,6 @@ allow 146.59.35.38;
 allow 146.70.164.210;
 allow 147.45.116.145;
 allow 147.45.78.34;
-allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -302,6 +301,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -558,6 +558,7 @@ allow 185.40.4.149;
 allow 185.40.4.150;
 allow 185.40.4.29;
 allow 185.40.4.38;
+allow 185.40.4.44;
 allow 185.40.4.92;
 allow 185.40.4.94;
 allow 185.40.4.95;
@@ -1401,7 +1402,6 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1698,6 +1698,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:132;
 allow 2a0e:4005:1002:ffff:185:40:4:149;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
+allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
@@ -1771,7 +1772,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.248;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1964,7 +1964,6 @@ allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
-allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
 allow 83.96.213.63;
