--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -167,6 +167,7 @@ allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
+allow 154.40.44.183;
 allow 155.138.161.171;
 allow 157.254.252.117;
 allow 160.119.249.240;
@@ -300,6 +301,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -1699,6 +1701,7 @@ allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:89c::1;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
 allow 2a0f:df00:0:255::196;
@@ -1759,7 +1762,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.248;
+allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1903,7 +1906,6 @@ allow 54.36.209.254;
 allow 5.45.102.93;
 allow 5.45.104.176;
 allow 5.45.98.162;
-allow 54.81.94.194;
 allow 5.79.66.19;
 allow 62.133.45.2;
 allow 62.171.137.169;
@@ -1946,7 +1948,6 @@ allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.82.78.14;
-allow 80.94.92.106;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.153.138.119;
@@ -1980,6 +1981,7 @@ allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.185.85.140;
+allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
@@ -2013,7 +2015,6 @@ allow 92.246.84.133;
 allow 93.113.25.221;
 allow 93.113.25.223;
 allow 93.123.12.112;
-allow 93.185.165.211;
 allow 93.8.245.134;
 allow 93.95.228.125;
 allow 93.95.228.205;
