--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -256,7 +256,6 @@ deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
-deny 2607:5300:201:3100::535e;
 deny 2607:5300:203:b45b::;
 deny 2607:5300:205:200::3dde;
 deny 2607:5300:205:200::4894;
@@ -535,6 +534,7 @@ deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 deny 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 deny 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
