--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -149,6 +149,7 @@ set_real_ip_from 146.59.35.246;
 set_real_ip_from 146.59.35.38;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
+set_real_ip_from 147.78.67.73;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -165,7 +166,6 @@ set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
 set_real_ip_from 154.26.159.157;
-set_real_ip_from 154.40.44.183;
 set_real_ip_from 155.138.161.171;
 set_real_ip_from 157.254.252.117;
 set_real_ip_from 160.119.249.240;
@@ -246,7 +246,6 @@ set_real_ip_from 179.43.159.198;
 set_real_ip_from 179.43.159.199;
 set_real_ip_from 179.43.159.200;
 set_real_ip_from 179.43.159.201;
-set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
@@ -298,7 +297,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -562,6 +560,7 @@ set_real_ip_from 185.82.219.109;
 set_real_ip_from 188.165.200.97;
 set_real_ip_from 188.172.229.15;
 set_real_ip_from 188.214.104.21;
+set_real_ip_from 188.244.106.82;
 set_real_ip_from 188.253.112.49;
 set_real_ip_from 188.253.7.106;
 set_real_ip_from 188.68.36.28;
@@ -630,6 +629,7 @@ set_real_ip_from 192.99.149.111;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
 set_real_ip_from 193.142.146.139;
+set_real_ip_from 193.142.147.233;
 set_real_ip_from 193.142.147.69;
 set_real_ip_from 193.182.96.246;
 set_real_ip_from 193.189.100.194;
@@ -1361,6 +1361,7 @@ set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:11c0:1b:aa2::5;
 set_real_ip_from 2a00:11c0:1c:311::5;
 set_real_ip_from 2a00:11c0:1f:1::55;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1808,7 +1809,6 @@ set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
 set_real_ip_from 45.9.148.113;
-set_real_ip_from 45.94.31.180;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.130;
 set_real_ip_from 45.95.169.223;
@@ -1955,6 +1955,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
@@ -2025,6 +2026,7 @@ set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.32.66.15;
+set_real_ip_from 94.72.98.8;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
