--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -742,6 +742,7 @@ deny 2a0e:fa00:0:1b::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:89c::1;
 deny 2a0f:9400:7e11:8ba1::1;
+deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
 deny 2a0f:df00:0:255::196;
