--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -130,6 +130,7 @@ allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 136.244.111.163;
+allow 137.184.197.55;
 allow 138.59.18.110;
 allow 139.162.249.209;
 allow 139.99.172.11;
@@ -942,7 +943,6 @@ allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
-allow 209.141.59.7;
 allow 209.141.60.219;
 allow 209.141.62.71;
 allow 212.21.66.6;
@@ -1085,6 +1085,7 @@ allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:a880:400:d0::28:6001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
@@ -1656,6 +1657,7 @@ allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:1b::1;
+allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:89c::1;
 allow 2a0f:9400:7e11:8ba1::1;
@@ -1724,7 +1726,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.248;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1774,7 +1776,6 @@ allow 45.79.144.222;
 allow 45.80.158.205;
 allow 45.80.158.23;
 allow 45.80.158.27;
-allow 45.82.102.158;
 allow 45.8.22.207;
 allow 45.83.104.137;
 allow 45.84.107.182;
@@ -1824,7 +1825,6 @@ allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
-allow 5.255.112.39;
 allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
@@ -1863,11 +1863,10 @@ allow 5.45.98.162;
 allow 62.133.45.2;
 allow 62.171.137.169;
 allow 62.182.84.146;
-allow 62.60.232.7;
-allow 62.60.232.9;
 allow 64.227.115.78;
 allow 66.146.193.33;
 allow 66.220.242.222;
+allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
@@ -1925,6 +1924,7 @@ allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
 allow 88.80.20.86;
+allow 88.99.249.117;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
